# filevault

./: .gitignore  CMakeLists.txt  config.json  styles.css  todo.md
include/controllers/: Application.hpp  AssetController.hpp  CategoryController.hpp  examplewindow.hpp
include/elements/: AssetGalleryItem.hpp  input.hpp
include/models/: Asset.hpp  AssetModel.hpp  CategoryModel.hpp  RootMetadata.hpp  VaultModel.hpp
include/utils/: FileUtils.hpp  FolderUtils.hpp  constants.hpp  utils.hpp
include/views/: AssetGalleryView.hpp  CategoryView.hpp  CenterView.hpp  CreateVault.hpp  DirectoryDialog.hpp  MainScreen.hpp  MainWindow.hpp  RightbarView.hpp  SidebarView.hpp
include/views/sidebar/: CategoryListView.hpp
src/: examplewindow.cpp  main.cpp  ui_example.xml
src/controllers/: Application.cpp  AssetController.cpp  CategoryController.cpp
src/elements/: AssetGalleryItem.cpp  input.cpp
src/models/: Asset.cpp  AssetModel.cpp  CategoryModel.cpp  VaultModel.cpp
src/utils/: FileUtils.cpp  FolderUtils.cpp  utils.cpp
src/views/: AssetGalleryView.cpp  CategoryView.cpp  CenterView.cpp  CreateVault.cpp  DirectoryDialog.cpp  MainScreen.cpp  MainWindow.cpp  RightbarView.cpp  SidebarView.cpp
src/views/sidebar/: CategoryListView.cpp
